k8s/bluegreen/blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexvion-blue
  namespace: nexvion-bg
  labels:
    app: nexvion
    color: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nexvion
      color: blue
  template:
    metadata:
      labels:
        app: nexvion
        color: blue
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: nexvion
          image: richieit/nexvion:1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: version
              mountPath: /usr/share/nginx/html/version.txt
              subPath: version.txt
      volumes:
        - name: tmp
          emptyDir: {}
        - name: version
          configMap:
            name: nexvion-blue-version
---
apiVersion: v1
kind: Service
metadata:
  name: nexvion-blue
  namespace: nexvion-bg
spec:
  selector:
    app: nexvion
    color: blue
  ports:
    - port: 80
      targetPort: 8080
