k8s/bluegreen/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexvion-live
  namespace: nexvion-bg
spec:
  ingressClassName: nginx
  rules:
    - host: bg.nexvion.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nexvion-live
                port:
                  number: 80
